fix: Fix CRUD bugs #5
* Fix create/update body
* Fix delete response when id not found
* Fix air build command
