# docs/swagger.json
@@ -273,6 +273,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Update Work Report",
+                        "name": "workReport",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_blox-eng_app_internal_model.UpdateWorkReport"
+                        }
                     }
                 ],
                 "responses": {
@@ -390,6 +399,31 @@
     },
     "definitions": {
         "github_com_blox-eng_app_internal_model.CreateWorkReport": {
+            "type": "object",
+            "properties": {
+                "quantity_unit": {
+                    "type": "string",
+                    "example": "Kg"
+                },
+                "site_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "work": {
+                    "type": "string",
+                    "example": "Hammering"
+                },
+                "work_quantity": {
+                    "type": "number",
+                    "example": 10
+                },
+                "worker": {
+                    "type": "string",
+                    "example": "John Doe"
+                }
+            }
+        },
+        "github_com_blox-eng_app_internal_model.UpdateWorkReport": {
             "type": "object",
             "properties": {
                 "quantity_unit": {
