# internal/handler/handler.go
@@ -9,7 +9,6 @@ import (
 	"github.com/blox-eng/app/pkg/httputil"
 
 	"github.com/go-chi/chi/v5"
-	"github.com/go-chi/render"
 	// log "github.com/sirupsen/logrus"
 )
 
@@ -24,9 +23,6 @@ type Request struct {
 
 func (a *Request) Bind(r *http.Request) error {
 	//TODO: to be expanded
-	if err := render.Bind(r, a.WorkReport); err != nil {
-		return err
-	}
 	return nil
 }
 
@@ -55,8 +51,3 @@ func Handler(store service.Service) http.Handler {
 
 	return r
 }
-
-//type Response struct {
-//	Meta interface{}
-//	Data interface{}
-//}
